K8s-Configs/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: order-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: smk8s.com
    http:
      paths:
      - path: /order
        backend:
          serviceName: order-service
          servicePort: 8080
